# gc2-connect-desktop

./: .editorconfig  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  README.md  gc2connect.spec  plan.md  pyproject.toml  todo.md
.github/workflows/: ci.yml
assets/: GC2Connect.icns
docs/: GC2_PROTOCOL.md  GSPRO_CONNECT.md  LINUX_USB_SETUP.md  MACOS_USB_SETUP.md  PRD.md  PRD_OPEN_RANGE.md  TRD.md  TRD_OPEN_RANGE.md
src/gc2_connect/: __init__.py  main.py  models.py
src/gc2_connect/config/: __init__.py  settings.py
src/gc2_connect/gc2/: __init__.py  usb_reader.py
src/gc2_connect/gspro/: __init__.py  client.py
src/gc2_connect/open_range/: __init__.py  engine.py  models.py
src/gc2_connect/open_range/physics/: __init__.py  aerodynamics.py  constants.py  engine.py  ground.py  trajectory.py
src/gc2_connect/open_range/visualization/: __init__.py  ball_animation.py  range_scene.py  trajectory_trace.py
src/gc2_connect/services/: __init__.py  export.py  history.py  shot_router.py
src/gc2_connect/ui/: __init__.py  app.py
src/gc2_connect/ui/components/: __init__.py  mode_selector.py  open_range_view.py
src/gc2_connect/utils/: __init__.py  reconnect.py
tests/: __init__.py  conftest.py
tests/e2e/: __init__.py  conftest.py  test_error_handling.py  test_open_range_flows.py  test_user_flows.py
tests/integration/: __init__.py  test_connection_handling.py  test_open_range_flow.py  test_open_range_ui.py  test_producer_consumer.py  test_settings_ui.py  test_shot_flow.py  test_usb_simulation.py
tests/simulators/: __init__.py  timing.py
tests/simulators/gc2/: __init__.py  models.py  packet_generator.py  packet_source.py  scenarios.py  scheduler.py
tests/simulators/gspro/: __init__.py  config.py  server.py
tests/unit/: __init__.py  test_export.py  test_gc2_protocol.py  test_gspro_client.py  test_models.py  test_open_range_settings.py  test_reconnection.py  test_settings.py  test_shot_history.py  test_shot_router.py  test_smoke.py
tests/unit/test_gc2_simulator/: __init__.py  test_models.py  test_packet_generator.py  test_packet_source.py  test_scenarios.py  test_scheduler.py  test_timing.py
tests/unit/test_gspro_simulator/: __init__.py  test_config.py  test_server.py
tests/unit/test_open_range/: __init__.py  test_aerodynamics.py  test_constants.py  test_ground.py  test_models.py  test_physics_validation.py  test_trajectory.py  test_trajectory_trace.py  test_visualization.py
tools/: mock_gspro_server.py
